--- a/lib/i18n/ru.json
+++ b/lib/i18n/ru.json
@@ -248,6 +248,6 @@
     "SS": "Южный Судан",
     "JM": "Ямайка",
     "JP": "Япония",
-    "XK": "Косово"
+    "XK": "Косово",
     "no_country": "Страна не найдена"
 }
