no_contry label uk

--- a/lib/i18n/uk.json
+++ b/lib/i18n/uk.json
@@ -248,5 +248,6 @@
     "SE": "Швеція",
     "LK": "Шрі-Ланка",
     "JM": "Ямайка",
-    "JP": "Японія"
+    "JP": "Японія",
+    "no_country": "Країна не знайдена"
 }
