--- a/lib/i18n/uk.json
+++ b/lib/i18n/uk.json
@@ -249,5 +249,6 @@
     "LK": "Шрі-Ланка",
     "JM": "Ямайка",
     "JP": "Японія",
-    "no_country": "Країна не знайдена"
+    "no_country": "Країна не знайдена",
+    "test": "test"
 }
